# gbsa-pipeline

./: 404.html  duties.py  index.html  objects.inv  pyproject.toml  search.json  sitemap.xml
.github/workflows/: ci.yml
changelog/: index.html
cli/: index.html
config/: mypy.ini  ruff.toml
configuration/: index.html
contributing/: index.html
data/: ena-top1885.sdf
data/GROMACS_default/: paramaterer.config
license/: index.html
reference/api/: index.html
scripts/: first_run.py  params_to_gromacs.py  run_non_defaults.py
src/gbsa_pipeline/: change_defaults.py  change_defaults_enum.py  change_params.py  docking.py  equilibration.py  frcmod_parametrization.py  gmx_edit_defaults.py  gromacs_index.py  ligand_preparation.py  minimization.py  parametrization.py  parametrization_enum.py  pipeline.py  solvation_box.py
tests/: config_test.py  frcmod_parametrization_test.py  gromacs_index_test.py  gromacs_params_test.py  ligand_preparation_test.py  parametrization_test.py  solvation_integration_test.py  solvation_test.py  user_inputs_test.py
tests/testdata/: CM1.mol2  CM2.mol2  HD1.mol2  HD2.mol2  Model4_dry.inpcrd  Model4_mcpbpy.frcmod  ZN1.mol2  paramaterer.config  test.gro  test.top
tests/testdata/custom_run_params/: integrator.config
tests/testdata/solvation/: complex.gro  complex.top
