[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "gbsa-pipeline"
description = "Optimize GBSA calculations for speed"
authors = [{ name = "Davide Crucitti", email = "davide.crucitti@grheco.com" }]
license = "EUPL-1.2"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "molvs>=0.1.1,<0.2",
    "pre-commit>=4.5.1,<5",
    "meeko>=0.5,<0.6", "pydantic",
]

[project.urls]
Homepage = "https://davide-grheco.github.io/gbsa-pipeline"
Documentation = "https://davide-grheco.github.io/gbsa-pipeline"
Changelog = "https://davide-grheco.github.io/gbsa-pipeline/changelog"
Repository = "https://github.com/davide-grheco/gbsa-pipeline"
Issues = "https://github.com/davide-grheco/gbsa-pipeline/issues"
Discussions = "https://github.com/davide-grheco/gbsa-pipeline/discussions"
Gitter = "https://gitter.im/gbsa-pipeline/community"
Funding = "https://github.com/sponsors/davide-grheco"

[project.scripts]
gbsa-pipeline = "gbsa_pipeline.cli:main"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache", "**/.mypy_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    { path = "share/**/*", relative-to = "." },
]

[tool.pixi.workspace]
channels = ["conda-forge", "openbiosim"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
biosimspace = ">=2025.3.0,<2026"
pixi-pycharm = ">=0.0.10,<0.0.11"
ambertools = ">=24.8,<25"
gromacs = ">=2025.4,<2026"

[tool.pixi.pypi-dependencies]
gbsa-pipeline = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
pytest = "pytest"
ruff = "ruff check --config config/ruff.toml ."
ruff-fix = "ruff check --config config/ruff.toml --fix ."
mypy = "mypy --config-file config/mypy.ini -p gbsa_pipeline -p tests"
check-quality = "ruff check src tests --config config/ruff.toml"
check-types = "FORCE_COLOR=1 mypy --config-file config/mypy.ini -p gbsa_pipeline -p tests"
check-docs = "mkdir -p htmlcov && touch htmlcov/index.html && mkdocs build --strict --verbose"
check-api = "griffe check gbsa_pipeline --search src --color --against main"
check = "ruff check src tests --config config/ruff.toml && FORCE_COLOR=1 mypy --config-file config/mypy.ini -p gbsa_pipeline -p tests && mkdir -p htmlcov && touch htmlcov/index.html && griffe check gbsa_pipeline --search src --color --against main"
test-all = "COVERAGE_FILE=.coverage PYTHONWARNDEFAULTENCODING=1 pytest tests -c config/pytest.ini -n auto --color=yes"
test = "COVERAGE_FILE=.coverage PYTHONWARNDEFAULTENCODING=1 pytest tests -c config/pytest.ini -n auto --color=yes -m 'no integration'"

docs = "mkdocs serve -a 127.0.0.1:8000"
docs-deploy = "DEPLOY=true mkdocs gh-deploy --force"
changelog = "git-changelog && yore check"
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files"
ci = "pixi run -e dev check-docs && pixi run -e dev check-quality && pixi run -e dev check-types && pixi run -e dev test"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-llmstxt>=0.2",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=1.0.3,<2",
    "tomli>=2.0; python_version < '3.11'",
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
    "pre-commit>=4.5.1",
]
